force-app/main/default/objects/SM_QoL_Survey__c/SM_QoL_Survey__c.object-meta.xml
<CustomObject>
    <label>SM QoL Survey</label>
    <nameField>
        <displayFormat>QoL-{0000}</displayFormat>
        <label>SM QoL Survey Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SM QoL Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>