force-app/main/default/objects/SM_QoL_Survey__c/fields/Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Animal ID#</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>SM QoL Surveys</relationshipLabel>
    <relationshipName>SM_QoL_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>