force-app/main/default/objects/SM_QoL_Survey__c/fields/Animal_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID_Number__c</fullName>
    <label>Animal ID Number</label>
    <type>TextArea</type>
</CustomField>