force-app/main/default/objects/SM_QoL_Survey__c/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <label>Animal Name</label>
    <type>TextArea</type>
</CustomField>