force-app/main/default/objects/SM_QoL_Survey__c/fields/Behavior_Modification__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Modification__c</fullName>
    <label>Behavior Modification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>