force-app/main/default/objects/SM_QoL_Survey__c/fields/Complete_Special_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Complete_Special_Recommendations__c</fullName>
    <label>Complete Special Recommendations?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>