force-app/main/default/objects/SM_QoL_Survey__c/fields/Consistent_Low_Stress_Handling__c.field-meta.xml
<CustomField>
    <fullName>Consistent_Low_Stress_Handling__c</fullName>
    <label>Consistent Low-Stress Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>