force-app/main/default/objects/SM_QoL_Survey__c/fields/Current_Medical_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Current_Medical_Concerns__c</fullName>
    <label>Current Medical Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>