force-app/main/default/objects/SM_QoL_Survey__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Center</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>BRC</fullName>
            </value>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>