force-app/main/default/objects/SM_QoL_Survey__c/fields/Enjoys_Being_Around_Other_Animals__c.field-meta.xml
<CustomField>
    <fullName>Enjoys_Being_Around_Other_Animals__c</fullName>
    <label>Enjoys Being Around Other Animals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>