force-app/main/default/objects/SM_QoL_Survey__c/fields/Excessive_Energy_or_Arousal__c.field-meta.xml
<CustomField>
    <fullName>Excessive_Energy_or_Arousal__c</fullName>
    <label>Excessive Energy or Arousal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>