force-app/main/default/objects/SM_QoL_Survey__c/fields/Exhibits_Fear_Frustration_Anxiety__c.field-meta.xml
<CustomField>
    <fullName>Exhibits_Fear_Frustration_Anxiety__c</fullName>
    <label>Exhibits Fear, Frustration, Anxiety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>