force-app/main/default/objects/SM_QoL_Survey__c/fields/Expresses_Natural_Behaviors__c.field-meta.xml
<CustomField>
    <fullName>Expresses_Natural_Behaviors__c</fullName>
    <label>Expresses Natural Behaviors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>