force-app/main/default/objects/SM_QoL_Survey__c/fields/Foster_Home__c.field-meta.xml
<CustomField>
    <fullName>Foster_Home__c</fullName>
    <label>Foster Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>