force-app/main/default/objects/SM_QoL_Survey__c/fields/In_Kennel_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>In_Kennel_Enrichment__c</fullName>
    <label>In-Kennel Enrichment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>