force-app/main/default/objects/SM_QoL_Survey__c/fields/In_Kennel_Negative_to_People__c.field-meta.xml
<CustomField>
    <fullName>In_Kennel_Negative_to_People__c</fullName>
    <label>In Kennel, Negative to People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>