force-app/main/default/objects/SM_QoL_Survey__c/fields/Interest_in_Objects_or_Toys__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Objects_or_Toys__c</fullName>
    <label>Interest in Objects or Toys</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>