force-app/main/default/objects/SM_QoL_Survey__c/fields/Is_Watchful_Wary_or_Anxious__c.field-meta.xml
<CustomField>
    <fullName>Is_Watchful_Wary_or_Anxious__c</fullName>
    <label>Is Watchful: Wary or Anxious</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>