force-app/main/default/objects/SM_QoL_Survey__c/fields/Kennel_Modification__c.field-meta.xml
<CustomField>
    <fullName>Kennel_Modification__c</fullName>
    <label>Kennel Modification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>