force-app/main/default/objects/SM_QoL_Survey__c/fields/Other_Special_Resources__c.field-meta.xml
<CustomField>
    <fullName>Other_Special_Resources__c</fullName>
    <label>Other Special Resources</label>
    <type>TextArea</type>
</CustomField>