force-app/main/default/objects/SM_QoL_Survey__c/fields/Psychological_Quality_of_Life__c.field-meta.xml
<CustomField>
    <fullName>Psychological_Quality_of_Life__c</fullName>
    <label>Psychological Quality of Life</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Quality_Rating</valueSetName>
    </valueSet>
</CustomField>