force-app/main/default/objects/SM_QoL_Survey__c/fields/Psychotropic_Medication__c.field-meta.xml
<CustomField>
    <fullName>Psychotropic_Medication__c</fullName>
    <label>Psychotropic Medication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>