force-app/main/default/objects/SM_QoL_Survey__c/fields/Recovers_Poorly_from_Stress__c.field-meta.xml
<CustomField>
    <fullName>Recovers_Poorly_from_Stress__c</fullName>
    <label>Recovers Poorly from Stress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>