force-app/main/default/objects/SM_QoL_Survey__c/fields/Relaxes_During_the_Day__c.field-meta.xml
<CustomField>
    <fullName>Relaxes_During_the_Day__c</fullName>
    <label>Relaxes During the Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Agreement_Level</valueSetName>
    </valueSet>
</CustomField>