force-app/main/default/objects/SM_QoL_Survey__c/fields/Social_Enrichment_with_People__c.field-meta.xml
<CustomField>
    <fullName>Social_Enrichment_with_People__c</fullName>
    <label>Social Enrichment with People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>