force-app/main/default/objects/SM_QoL_Survey__c/fields/Special_Housing__c.field-meta.xml
<CustomField>
    <fullName>Special_Housing__c</fullName>
    <label>Special Housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Resource_Selection</valueSetName>
    </valueSet>
</CustomField>