force-app/main/default/objects/SM_QoL_Survey__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>