force-app/main/default/objects/SM_QoL_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Animal_ID_Number__c</columns>
    <columns>Animal_Name__c</columns>
    <columns>Abnormal_Repetitive_Behaviors__c</columns>
    <columns>Behavior_Modification__c</columns>
    <columns>Complete_Special_Recommendations__c</columns>
    <columns>Consistent_Low_Stress_Handling__c</columns>
    <columns>Current_Medical_Concerns__c</columns>
    <columns>Enjoys_Being_Around_Other_Animals__c</columns>
    <columns>Enjoys_Being_Around_People__c</columns>
    <columns>Excessive_Energy_or_Arousal__c</columns>
    <columns>Exhibits_Fear_Frustration_Anxiety__c</columns>
    <columns>Expresses_Natural_Behaviors__c</columns>
    <columns>In_Kennel_Negative_to_People__c</columns>
    <columns>In_Kennel_Enrichment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>